<resources>
    <string name="app_name">ShoppProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_name_home">首页</string>
    <string name="bar_name_topic">专题</string>
    <string name="bar_name_sort">分类</string>
    <string name="bar_name_shop">购物车</string>
    <string name="bar_name_me">我的</string>
    <string name="et_name">请输入用户名</string>
    <string name="et_pwd">请输入密码</string>
    <string name="CheckBox_jizhu">是否记住密码</string>
    <string name="btn_login">登录</string>
    <string name="btn_riget">注册</string>
    <string name="name_pass_null_toast">用户密码不能为空</string>
    <string name="et_right_username">请输入用户名</string>
    <string name="et_right_pwd">请输入密码</string>
    <string name="et_right_pwds">请确定密码</string>
    <string name="et_right_verifition">请输入验证码</string>
    <string name="btn_list_place">下单</string>
    <string name="tv_list_compile">编辑</string>
    <string name="tv_select">已选择：</string>
    <string name="Me_my">我的</string>
    <string name="Me_login">点击登录</string>
    <string name="Me_my_dizhi">我的收货地址</string>
    <string name="Me_my_newdizhi">添加新地址</string>
    <string name="Me_my_name">高亚波</string>
    <string name="Me_my_phnoe">18348755367</string>
    <string name="Me_my_default">默认</string>
    <string name="Me_my_dizhis">北京  北京市  海淀区  上庄镇 首航连天学院</string>
    <string name="Me_my_compile">编辑</string>

    <!--    <string name=""></string>-->
</resources>