<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.LoginActivity">
    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="20dp"
        android:hint="@string/et_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_marginTop="30dp"
        android:hint="@string/et_pwd"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <CheckBox
        android:id="@+id/ck_jizhu"
        android:text="@string/CheckBox_jizhu"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button

        android:text="@string/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ck_jizhu"
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/btn_riget"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:id="@+id/btn_riget"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>