<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".my.DizhiActivity">
    <ImageView
        android:id="@+id/My_me_return"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:src="@mipmap/f10"
        android:layout_width="30dp"
        android:layout_height="30dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:id="@+id/Me_my_dizhi"
        android:text="@string/Me_my_dizhi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>
    <TextView

        android:id="@+id/Me_my_newdizhi"
        android:layout_marginTop="10dp"
        android:text="@string/Me_my_newdizhi"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <view

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Me_my_dizhi"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <ImageView
        android:layout_marginTop="10dp"
        android:src="@mipmap/f1"

        android:id="@+id/Me_my_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Me_my_dizhi"
        android:layout_width="50dp"
        android:layout_height="50dp"/>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/Me_my_img"
        app:layout_constraintTop_toBottomOf="@id/Me_my_dizhi"
        android:id="@+id/My_me_name"
        android:textSize="15dp"
        android:text="@string/Me_my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/Me_my_phnoe"
        android:id="@+id/Me_my_phone"
        app:layout_constraintLeft_toRightOf="@id/My_me_name"
        app:layout_constraintTop_toBottomOf="@id/Me_my_dizhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/My_me_default"
        android:layout_marginLeft="10dp"
        android:textColor="#D32F2F"
        android:text="@string/Me_my_default"
        app:layout_constraintLeft_toRightOf="@id/Me_my_img"
        app:layout_constraintTop_toBottomOf="@id/My_me_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/My_me_dizhis"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/My_me_name"
        app:layout_constraintTop_toBottomOf="@id/Me_my_phone"
        android:text="@string/Me_my_dizhis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toRightOf="@id/My_me_dizhis"
        app:layout_constraintTop_toBottomOf="@id/Me_my_phone"
        android:text="@string/tv_list_compile"
        android:id="@+id/My_me_compile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>