<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.RightActivity">

    <EditText
        android:text="@string/et_right_username"
        android:layout_marginTop="40dp"
        android:id="@+id/et_right_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:text="@string/et_right_pwd"
        android:layout_marginTop="20dp"
        android:id="@+id/et_right_pwd"
        app:layout_constraintTop_toBottomOf="@id/et_right_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:text="@string/et_right_pwds"
        android:layout_marginTop="20dp"
        android:id="@+id/et_right_pwds"
        app:layout_constraintTop_toBottomOf="@id/et_right_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:text="@string/et_right_verifition"
        android:layout_marginTop="10dp"
        android:layout_marginRight="150dp"
        app:layout_constraintTop_toBottomOf="@id/et_right_pwds"
        android:id="@+id/et_right_verification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/et_right_verification"
        app:layout_constraintTop_toBottomOf="@id/et_right_pwds"
        android:id="@+id/img_right_btn_verification"
        android:layout_width="150dp"
        android:layout_height="50dp"/>
    <Button
        android:layout_marginTop="50dp"
        android:text="@string/btn_riget"
        app:layout_constraintTop_toBottomOf="@id/img_right_btn_verification"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/btn_riget"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>